# homeassistant-elero

./: AGENTS.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
custom_components/elero/: __init__.py  config_flow.py  const.py  cover.py  manifest.json  provider.py  services.yaml
custom_components/elero/translations/: de.json  en.json
docs/: GITHUB_SETUP.md  README.md
docs/agent/: AUTORESEARCH.md  CHECKS.md  PROJECT.md  RULES.md  SAFETY.md  WORKFLOWS.md
docs/developer/: ARCHITECTURE.md  CORE_UPSTREAMING.md  DEVELOPMENT.md  INITIAL_ROADMAP.md  RF_PROVIDER_STRATEGY.md
docs/user/: HACS.md
scripts/: check_markdown_links.py
tests/: README.md
