[project]
name = "homeassistant-elero"
version = "0.0.1"
description = "Experimental Home Assistant custom integration for Elero RF devices"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "TBD" }

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
